--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ table.picture{
 
 table.picture img{
   border: 1px #AAAAAA solid;
-  Opacity: 0.7
+  Opacity: 0.6;
 }
 
 table.picture img:hover{
