--- a/style.css
+++ b/style.css
@@ -168,6 +168,7 @@ table.picture>caption{
 table.linktop{
   table-layout:auto;
   width:430px;
+  height:70px;
   margin-top:4em;
   margin-left:auto;
   margin-right:auto;
@@ -197,7 +198,7 @@ table.link td{
   padding-top:0.5em;
   padding-bottom:0.5em;
   width:auto;
-  height:70px
+  height:70px;
 }
 
 table.link img{
