レイアウト微調整

--- a/style.css
+++ b/style.css
@@ -170,6 +170,7 @@ table.linktop{
   width:512px;
   height:70px;
   margin-top:4em;
+  margin-bottom:0.7em;
   margin-left:auto;
   margin-right:auto;
   text-align:center;
