--- a/hardproblem/desktop.css
+++ b/hardproblem/desktop.css
@@ -38,6 +38,7 @@ div.header {
   width: 100%;
   margin: 0;
   padding: 0;
+  font-family:"游明朝 Demibold","ヒラギノ明朝W4","HG明朝B","ＭＳ 明朝",serif;
 }
 
 div.header .hr {
@@ -109,6 +110,7 @@ div.header div.hpot-section-index ol li:hover {
 div.footer {
   margin: 5em 0 0;
   padding: 0;
+  font-family:"游明朝 Demibold","ヒラギノ明朝W4","HG明朝B","ＭＳ 明朝",serif;
 }
 
 div.footer div.hr {
