暗黒定数式通販告知

--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ table.top{
   font:midium/100% "メイリオ","Meiryo",sans-serif;
   padding: 1em;
   border: 1px #000000 solid;
-  visibility:hidden;
+  visibility:;
 }
 
 
