--- a/hardproblem/desktop.css
+++ b/hardproblem/desktop.css
@@ -20,6 +20,7 @@ a img {
  * Header
 \**************************************/
 div.header {
+  position: relative;
   width: 100%;
   margin: 0;
   padding: 0;
@@ -47,8 +48,9 @@ div.header p.word {
  * Section Index of Header
 \**************************************/
 div.header div.hpot-section-index {
-  float: right;
-  margin: 0.25em 2em;
+  position: absolute;
+  right: 2em;
+  top: 0.25em;
 }
 
 div.header div.hpot-section-index ol {
