--- a/style.css
+++ b/style.css
@@ -16,17 +16,14 @@ html {
 overflow-y:scroll;
 }
 
-*{
-  font-family:"メイリオ","Meiryo",sans-serif;
-}
-
 .logo{
   margin-top:32px;
   text-align: center;
 }
 
 .back{
-  font:large/200% "メイリオ",sans-serif;
+  font-size:large
+  line-height:200%;
   text-align:center;
   margin-top:4em;
   margin-bottom:2em;
@@ -45,7 +42,8 @@ table.top{
   margin-left:auto;
   margin-right:auto;
   text-align:center;
-  font:large/300% "メイリオ","Meiryo",sans-serif;
+  font-size:large;
+  line-height:300%;
   padding: 0;
 }
 
@@ -55,7 +53,8 @@ table.top{
   margin-left:auto;
   margin-right:auto;
   text-align:center;
-  font:midium/100% "メイリオ","Meiryo",sans-serif;
+  font-size:midium;
+  line-height:175%;
   padding: 1em;
   border: 1px #000000 solid;
   visibility:;
@@ -69,16 +68,20 @@ table.top{
 
 table.novel{
   table-layout:auto;
-  width:640px;
-  margin-top:1.5em;
-  margin-bottom:5.5em;
+  width:800px;
+  margin-top:5em;
+  margin-bottom:5em;
   margin-left:auto;
   margin-right:auto;
-  border: solid 1px #555555
+  border: solid 1px #dddddd;
+  border-spacing:0px;
 }
 
 table.novel td{
-  border: solid 1px #555555
+  border-bottom: solid 1px #dddddd;
+  border-top: solid 1px #dddddd;
+  border-right: solid 1px #dddddd;
+  border-left: solid 1px #dddddd;
 }
 
 .noveltitle td{
@@ -89,23 +92,26 @@ table.novel td{
   
 .noveldata1{
   text-align:center;
-  font:medium/100% "メイリオ",sans-serif;
+  font-size:medium
+  line-height:100%;
   height:2em;
   }
  
 .noveldata2{
   text-align:center;
-  font:medium/100% "メイリオ",sans-serif;
-  height:3em;
+  font-size:medium;
+  line-height:100%;
+  height:2em;
   }
 
 .novelabst{
-  padding-left:1em;
-  padding-right:1em;
-  padding-top:0.5em;
-  padding-bottom:0.5em;
+  padding-left:2em;
+  padding-right:2em;
+  padding-top:2em;
+  padding-bottom:2em;
   text-align:justify;
-　font:large/100% "メイリオ",sans-serif;
+　 font-size:large;
+　 line-height:100%;
 }
 
 table.short{
@@ -114,11 +120,11 @@ table.short{
   margin-top:0.5em;
   margin-left:auto;
   margin-right:auto;
-  border: solid 1px #555555
+  border: solid 1px #cccccc
 }
 
 table.short td{
-  border: solid 1px #555555
+  border: solid 0px #cccccc
 }
 
 
@@ -151,7 +157,8 @@ table.picture img:hover{
 }
 
 table.picture>caption{
-  font:large/150% "メイリオ",sans-serif;
+  font-size:large;
+  line-height:150%;
   text-align:left;
 }
 
@@ -166,13 +173,15 @@ table.picture>caption{
 
 .picturetitle{
   margin-top:1em;
-  font:large/100% "メイリオ",sans-serif;
+  font-size:large;
+  line-height:100%;
   text-align:center;
 }
 
 .caption{
   margin-top:1em;
-  font:medium/100% "メイリオ",sans-serif;
+  font-size:medium;
+  line-height:100%;
   text-align:center;
 }
 
