--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ table.top{
   line-height:175%;
   padding: 1em;
   border: 1px #000000 solid;
-  visibility:;
+  visibility:true;
 }
 
 
@@ -87,12 +87,12 @@ table.novel td{
 .noveltitle td{
   text-align:center;
   height:100px;
-  font-size:x-large;
+  font-size:xx-large;
   }
   
 .noveldata1{
   text-align:center;
-  font-size:medium
+  font-size:medium;
   line-height:100%;
   height:2em;
   }
@@ -100,7 +100,7 @@ table.novel td{
 .noveldata2{
   text-align:center;
   font-size:medium;
-  line-height:100%;
+  line-height:125%;
   height:2em;
   }
 
