--- a/hardproblem/desktop.css
+++ b/hardproblem/desktop.css
@@ -230,12 +230,14 @@ div.hpot-main-header {
 
 #main-contents img.hpot-cover {
   float: left;
-  position: relative; top:-3em;right:-0.5em;
+  position: relative; top:-3em;right:1.5em;
+  border:double 4px;
 }
 
 /**************************************\
  * Index of Main page
 \**************************************/
+
 #main-hpot-index {
   right:auto;
   float: right;
@@ -249,8 +251,14 @@ div.hpot-main-header {
   list-style: none;
   width: 33em;
   margin: 0;
-  padding: right:0em;
-  position: relative; top:1em;
+  padding-right:1em;
+  padding-top:4em;
+  padding-bottom:4.1em;
+  position: relative; top:-4em; left:-1em;
+  border-top:double 4px;
+  border-bottom:double 4px;
+  border-right:double 4px;
+  background-color:#FFFFFF;
 }
 
 #main-hpot-index > ol li {
