--- a/hardproblem/landscape.css
+++ b/hardproblem/landscape.css
@@ -36,19 +36,19 @@ div.header .hr {
 /**************************************\
  * Contents of Main contents
 \**************************************/
-#main-contents img.hpot-cover {
+#main-contents img.hpft-cover {
   display: none; /* FIXME */
 }
 
 /**************************************\
  * Header of Main page
 \**************************************/
-div.hpot-main-header img {
+div.hpft-main-header img {
   width: 50%;
   height: auto;
 }
 
-div.hpot-main-header p.word {
+div.hpft-main-header p.word {
   color: #888;
   text-align: center;
 }
@@ -56,7 +56,7 @@ div.hpot-main-header p.word {
 /**************************************\
  * Header of Novel page
 \**************************************/
-div.hpot-page-header {
+div.hpft-page-header {
   display: none;
 }
 
@@ -77,14 +77,14 @@ div.footer div.hr {
 /**************************************\
  * Index of Footer
 \**************************************/
-div.footer div.hpot-index > ol {
+div.footer div.hpft-index > ol {
   list-style: none;
   width: 100%;
   margin: 0;
   padding: 0;
 }
 
-div.footer div.hpot-index div.hpot-section-index > ol {
+div.footer div.hpft-index div.hpft-section-index > ol {
   list-style: none;
   width: auto;
   display: inline-block;
@@ -92,13 +92,13 @@ div.footer div.hpot-index div.hpot-section-index > ol {
   padding: 0;
 }
 
-div.footer div.hpot-index div.hpot-section-index > p.title {
+div.footer div.hpft-index div.hpft-section-index > p.title {
   color: #ccc;
   width: 16em;
   display: inline-block;
 }
 
-div.footer div.hpot-index div.hpot-section-index > ol li {
+div.footer div.hpft-index div.hpft-section-index > ol li {
   width: 2em;
   margin: 0 0.125em;
   padding: 0;
@@ -106,16 +106,16 @@ div.footer div.hpot-index div.hpot-section-index > ol li {
   text-align: center;
 }
 
-div.footer div.hpot-index div.hpot-section-index > ol li a {
+div.footer div.hpft-index div.hpft-section-index > ol li a {
   color: #ccc;
   text-decoration: none;
 }
 
-div.footer div.hpot-index div.hpot-section-index > ol li {
+div.footer div.hpft-index div.hpft-section-index > ol li {
   border-bottom: solid 3px #fff;
 }
 
-div.footer div.hpot-index div.hpot-section-index > ol li[now="true"] {
+div.footer div.hpft-index div.hpft-section-index > ol li[now="true"] {
   border-bottom: solid 3px #88f;
 }
 
@@ -153,26 +153,26 @@ div.contents div.logo img {
 /**************************************\
  * Index of Main page
 \**************************************/
-#main-hpot-index > ol {
+#main-hpft-index > ol {
   list-style: none;
   width: 100%;
   margin: 0;
   padding: 0;
 }
 
-#main-hpot-index > ol li {
+#main-hpft-index > ol li {
   margin: 0;
   padding: 0;
 }
 
-#main-hpot-index > ol li p.title {
+#main-hpft-index > ol li p.title {
   width: 16em;
   color: #555;
   font-weight: bold;
   display: inline-block;
 }
 
-#main-hpot-index > ol li ol {
+#main-hpft-index > ol li ol {
   width: auto;
   list-style: none;
   margin: 0;
@@ -180,7 +180,7 @@ div.contents div.logo img {
   display: inline-block;
 }
 
-#main-hpot-index > ol li ol li {
+#main-hpft-index > ol li ol li {
   color: #ccc;
   width: 2em;
   margin: 0 0.125em;
@@ -189,16 +189,16 @@ div.contents div.logo img {
   text-align: center;
 }
 
-#main-hpot-index > ol li ol li a {
+#main-hpft-index > ol li ol li a {
   color: #ccc;
   text-decoration: none;
 }
 
-#main-hpot-index > ol li ol li {
+#main-hpft-index > ol li ol li {
   border-bottom: solid 3px #fff;
 }
 
-#main-hpot-index > ol li ol li[now="true"] {
+#main-hpft-index > ol li ol li[now="true"] {
   border-bottom: solid 3px #88f;
 }
 
