--- a/hardproblem/portrait.css
+++ b/hardproblem/portrait.css
@@ -36,19 +36,19 @@ div.header .hr {
 /**************************************\
  * Contents of Main contents
 \**************************************/
-#main-contents img.hpot-cover {
+#main-contents img.hpft-cover {
   display: none; /* FIXME */
 }
 
 /**************************************\
  * Header of Main page
 \**************************************/
-div.hpot-main-header img {
+div.hpft-main-header img {
   width: 100%;
   height: auto;
 }
 
-div.hpot-main-header p.word {
+div.hpft-main-header p.word {
   color: #888;
   text-align: center;
 }
@@ -56,28 +56,28 @@ div.hpot-main-header p.word {
 /**************************************\
  * Header of Novel page
 \**************************************/
-div.hpot-page-header img {
+div.hpft-page-header img {
   width: 50%;
 }
 
-div.hpot-page-header p.word {
+div.hpft-page-header p.word {
   display: none;
 }
 
 /**************************************\
  * Section Index of Header
 \**************************************/
-div.header div.hpot-section-index p.title {
+div.header div.hpft-section-index p.title {
   color: #ccc;
 }
 
-div.header div.hpot-section-index ol {
+div.header div.hpft-section-index ol {
   list-style: none;
   margin: 1em 0;
   padding: 0;
 }
 
-div.header div.hpot-section-index ol li {
+div.header div.hpft-section-index ol li {
   color: #ccc;
   min-width: 1.5em;
   margin: 0.25em 0.125em;
@@ -86,16 +86,16 @@ div.header div.hpot-section-index ol li {
   text-align: center;
 }
 
-div.header div.hpot-section-index ol li a {
+div.header div.hpft-section-index ol li a {
   color: #ccc;
   text-decoration: none;
 }
 
-div.header div.hpot-section-index ol li {
+div.header div.hpft-section-index ol li {
   border-bottom: solid 3px #fff;
 }
 
-div.header div.hpot-section-index ol li[now="true"] {
+div.header div.hpft-section-index ol li[now="true"] {
   border-bottom: solid 3px #88f;
 }
 
@@ -116,21 +116,21 @@ div.footer div.hr {
 /**************************************\
  * Index of Footer
 \**************************************/
-div.footer div.hpot-index > ol {
+div.footer div.hpft-index > ol {
   list-style: none;
   width: 100%;
   margin: 0;
   padding: 0;
 }
 
-div.footer div.hpot-section-index > ol {
+div.footer div.hpft-section-index > ol {
   list-style: none;
   width: 100%;
   margin: 0;
   padding: 0;
 }
 
-div.footer div.hpot-section-index li {
+div.footer div.hpft-section-index li {
   color: #ccc;
   min-width: 1.5em;
   margin: 0.25em 0.125em;
@@ -139,20 +139,20 @@ div.footer div.hpot-section-index li {
   text-align: center;
 }
 
-div.footer div.hpot-section-index p.title {
+div.footer div.hpft-section-index p.title {
   color: #ccc;
 }
 
-div.footer div.hpot-section-index li a {
+div.footer div.hpft-section-index li a {
   color: #ccc;
   text-decoration: none;
 }
 
-div.footer div.hpot-section-index li {
+div.footer div.hpft-section-index li {
   border-bottom: solid 3px #fff;
 }
 
-div.footer div.hpot-section-index li[now="true"] {
+div.footer div.hpft-section-index li[now="true"] {
   border-bottom: solid 3px #88f;
 }
 
@@ -190,31 +190,31 @@ div.contents div.logo img {
 /**************************************\
  * Index of Main page
 \**************************************/
-#main-hpot-index ol {
+#main-hpft-index ol {
   list-style: none;
   width: 100%;
   margin: 0;
   padding: 0;
 }
 
-#main-hpot-index > ol li {
+#main-hpft-index > ol li {
   width: 100%;
   margin: 0.5em auto 0.5em;
   padding: 0;
 }
 
-#main-hpot-index > ol li p.title {
+#main-hpft-index > ol li p.title {
   color: #555;
   font-weight: normal;
 }
 
-#main-hpot-index > ol li ol {
+#main-hpft-index > ol li ol {
   list-style: none;
   margin: 0;
   padding: 0;
 }
 
-#main-hpot-index > ol li ol li {
+#main-hpft-index > ol li ol li {
   width: 1.5em;
   margin: 0 0.25em;
   padding: 0;
@@ -222,16 +222,16 @@ div.contents div.logo img {
   text-align: center;
 }
 
-#main-hpot-index > ol li ol li a {
+#main-hpft-index > ol li ol li a {
   color: #999;
   text-decoration: none;
 }
 
-#main-hpot-index > ol li ol li {
+#main-hpft-index > ol li ol li {
   border-bottom: solid 3px #fff;
 }
 
-#main-hpot-index > ol li ol li:hover {
+#main-hpft-index > ol li ol li:hover {
   border-bottom: solid 3px #88f;
 }
 
