--- a/metastable3/desktop.css
+++ b/metastable3/desktop.css
@@ -280,9 +280,10 @@ body.index {
   width: 33em;
   margin: 0;
   padding-right:1em;
-  padding-top:4em;
+  padding-top:3em;
   padding-bottom:4.1em;
-  height:39.9em;
+  line-height:1em;
+  height:40.9em;
   position: relative; top:-4em; left:-1em;
   border-top:double 4px;
   border-bottom:double 4px;
